deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central-viewer-geoserver
spec:
  template:
    spec:
      containers:
      - image: sensrnetnl/central-viewer-geoserver:0.1.0
        name: central-viewer-geoserver
        ports:
        - containerPort: 8080
