deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: central-viewer-geoserver
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
